tests/errors/missing_val_56/e8.src
.IPPcode21

CREATEFRAME
DEFVAR TF@x
PUSHFRAME

NOT LF@x LF@x
